--- a/styles/main.css
+++ b/styles/main.css
@@ -1,13 +1,15 @@
-.container {
+.containerMain {
   min-height: 100vh;
   padding: 0 0.5rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: black;
 }
 
 .mainWrapper {
+  color:black;
   padding: 5rem 0;
   flex: 1;
   display: flex;
@@ -16,8 +18,32 @@
   align-items: center;
 }
 
+.navbar {
+  padding: 20px;
+}
+
+ul {
+  color: white;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: black;
+  font-size: 25px;
+}
+
+li {
+float: left;
+padding: 10px;
+}
+
+li a {
+  display: block;
+  padding: 20px;
+}
+
 .title a {
-  color: #0070f3;
+  color: white;
   text-decoration: none;
 }
 
@@ -36,11 +62,16 @@
 .title,
 .description {
   text-align: center;
+  color: white;
 }
 
 .description {
   line-height: 1.5;
   font-size: 1.5rem;
+}
+
+.linkDescription {
+  color:white; 
 }
 
 @media only screen and (max-width:800px) {
