--- a/styles/main.css
+++ b/styles/main.css
@@ -74,8 +74,8 @@ li a {
   color:white; 
 }
 
-@media only screen and (max-width:800px) {
+/*@media only screen and (max-width:800px) {
   .title {
    color:red;
   }
-}
+}*/
