--- a/styles/main.css
+++ b/styles/main.css
@@ -11,15 +11,19 @@
 .mainWrapper {
   color:black;
   padding: 5rem 0;
+  margin-left: 21rem;
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: flex-end;
+  text-align: right;
 }
 
 .navbar {
-  padding: 20px;
+  padding: 5px;
+  font-family: 'Bebas Neue', cursive;
+  background-color: black;
 }
 
 ul {
@@ -34,29 +38,28 @@ ul {
 
 li {
 float: left;
-padding: 10px;
+padding: 20px;
+display: block;
 }
 
-li a {
-  display: block;
-  padding: 20px;
+li a:hover {
+ text-decoration: underline;
 }
 
 .title a {
   color: white;
   text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
+  font-family: 'Bebas Neue', regular;
+  text-align: right;
 }
 
 .title {
   margin: 0;
   line-height: 1.15;
   font-size: 4rem;
+  font-family: 'Bebas Neue', cursive;
+  letter-spacing: 4px;
+  text-align: right;
 }
 
 .title,
@@ -68,6 +71,8 @@ li a {
 .description {
   line-height: 1.5;
   font-size: 1.5rem;
+  font-family: 'Roboto', sans-serif;
+  text-align: right;
 }
 
 .linkDescription {
