--- a/styles/main.css
+++ b/styles/main.css
@@ -1,29 +1,29 @@
 .containerMain {
   min-height: 100vh;
-  padding: 0 0.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  padding: 0 1rem;
   background-color: black;
+  background-image: url("/blackoceanbackground.png"); 
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
-.mainWrapper {
-  color:black;
-  padding: 5rem 0;
-  margin-left: 21rem;
-  flex: 1;
+.containerMainElements {
+  width: 41%;
+  min-height: 80%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: flex-end;
-  text-align: right;
+  justify-content: space-between;
+  position: relative;
+  float: right;
+  margin: 8rem 0px 0px 0px;
 }
-
 .navbar {
-  padding: 5px;
-  font-family: 'Bebas Neue', cursive;
-  background-color: black;
+  padding: 25px;
+  font-family: 'Roboto', sans-serif;
+  background-color: transparent;
+  display: flex;
+  justify-content: center;
 }
 
 ul {
@@ -32,7 +32,7 @@ ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: black;
+  background-color: transparent;
   font-size: 25px;
 }
 
@@ -46,37 +46,45 @@ li a:hover {
  text-decoration: underline;
 }
 
-.title a {
-  color: white;
-  text-decoration: none;
-  font-family: 'Bebas Neue', regular;
-  text-align: right;
-}
-
 .title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
+  line-height: 1;
+  font-size: 5rem;
   font-family: 'Bebas Neue', cursive;
   letter-spacing: 4px;
-  text-align: right;
 }
 
 .title,
 .description {
-  text-align: center;
+  margin: 2rem 0px 0px 0px;
+  text-align: left;
   color: white;
 }
 
 .description {
-  line-height: 1.5;
-  font-size: 1.5rem;
-  font-family: 'Roboto', sans-serif;
-  text-align: right;
+  width: 70%;
+  font-size: 1.50rem;
+  font-family: 'Inconsolata', monospace;
 }
 
-.linkDescription {
-  color:white; 
+.btnLearnMore {
+  margin: 2rem 0px 0px 0px;
+  width: 25%;
+  background-color: transparent;
+  color: #E8E8E8;
+  border: solid;
+  border-radius: 10px;
+  border-width: 3px;
+  border-color: #E8E8E8;
+  padding: 8px 16px;
+  font-family: 'Inconsolata', monospace;
+  font-size: 20px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+
+.btnLearnMore:hover {
+  color: black;
+  background-color: #E8E8E8;
 }
 
 /*@media only screen and (max-width:800px) {
