updated submit button on contact form

--- a/styles/main.css
+++ b/styles/main.css
@@ -5,7 +5,7 @@ div.main {
 }
 
 div.home {
-  height: 110vh;
+  height: 100vh;
   padding: 2rem 2rem;
   position: relative;
   background-image: url("/blackoceanbackground.png"); 
@@ -29,7 +29,7 @@ div.homeElements {
 }
 
 div.about {
-  height: 110vh;
+  height: 100vh;
   padding: 2rem 2rem;
   position: relative;
   background: #E8E8E8;
@@ -51,7 +51,7 @@ div.aboutElements {
 }
 
 div.projects {
-  height: 110vh;
+  height: 100vh;
   position: relative;
   background: #1A1A1A;
 }
@@ -71,7 +71,7 @@ div.projectsElements {
 }
 
 div.contact {
-  height: 110vh;
+  height: 100vh;
   position: relative;
   background: #E8E8E8;
 }
@@ -97,7 +97,7 @@ div.contactForm {
   justify-content: space-evenly;
   position: relative;
   top: 50%;
-  right: 9%;
+  right: 12%;
   transform:translate(0%, -50%);
 }
 
@@ -119,6 +119,40 @@ div.footerElements {
   top: 40%;
   left: 10%;
   transform:translate(0%, -40%);
+}
+
+div.aboutDynamic {
+  height: 100vh;
+  position: relative;
+  background: #1a1a1a;
+}
+
+div.aboutDynamicElements {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  float: left;
+  width: 40%;
+  background-color: transparent;
+  padding: relative;
+  position: absolute;
+  top: 50%;
+  left: 10%;
+  transform:translate(0%, -50%);
+}
+
+div.aboutDynamicElements2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  float: right;
+  width: 40%;
+  background-color: transparent;
+  padding: relative;
+  position: absolute;
+  top: 50%;
+  left: 64%;
+  transform:translate(0%, -50%);
 }
 
 /*----------End div styling----------*/
@@ -233,6 +267,14 @@ li a:hover {
   height: 50px;
   width: 50px;
 }
+
+.aboutImage {
+  position: relative;
+  top: 50%;
+  left: 44%;
+  transform:translate(0%, -50%);
+}
+
 /*----------Light colored text elements----------*/
 .titleA {
   line-height: 1;
@@ -355,9 +397,10 @@ textarea {
 }
 
 /*----------Begin media queries----------*/
-@media only screen and (max-width:800px) {
+/*----------iPhone 6/7/8 Plus------------*/
+@media only screen and (max-width:414) {
   .title {
-   color:red;
+    color: red;
   }
-/*----------End media queries----------*/
 }
+/*----------End media queries----------*/
